--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -16,11 +16,6 @@
     <div class="four fields">
 
       <div class="field">
-        <%= form.label t('invoice_number') %>
-        <%= form.collection_select :display_number, Invoice.all.order(display_number: :desc), :display_number, :display_number, {:include_blank => true}, {required: true, class: 'form-control', id: 'invoice_form_number'} %>
-      </div>
-
-      <div class="field">
         <%= form.label t('customer') %>
         <%= form.collection_select :customer_id, Customer.all, :id, :name, {:include_blank => true}, {required: true, class: 'form-control', id: 'invoice_form_customer'} %>
       </div>
@@ -41,17 +36,17 @@
     <div class="field">
       <%= form.label t('projects_done').pluralize %>
       <% if @invoice.id %>
-        <%= form.select(:project_ids, Project.where(status: :quotation)
+        <%= form.select(:project_ids, Project.where(status: :accepted)
             .or(Project.where(invoice_id: @invoice.id))
             .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {}, {class: 'form-control', id: 'invoice_form_projects', autocomplete: 'nope', :multiple => true}) %>
       <% else %>
-        <%= form.select(:project_ids, Project.where(status: :quotation)
+        <%= form.select(:project_ids, Project.where(status: :accepted)
             .collect {|project| [project.name, project.id, {customer: project.customer.id}]}, {}, {class: 'form-control', id: 'invoice_form_projects', autocomplete: 'nope', :multiple => true}) %>
       <% end %>
     </div>
 
     <div class="field centered">
-      <%= form.submit t('create'), :class => "ui green button" %>
+      <%= form.submit t('create'), :class => "ui green button", onclick: "setTimeout(function(){location.reload()}, 3000);", formtarget: "_blank"  %>
     </div>
   </div>
 <% end %>
