--- a/app/views/layouts/pdf_footer_quotation.html.erb
+++ b/app/views/layouts/pdf_footer_quotation.html.erb
@@ -11,7 +11,7 @@
     p {
       color: grey;
       text-align: center;
-      font-size: 10px;
+      font-size: 15px;
       margin-left: 65px;
       margin-right: 65px;
     }
@@ -34,14 +34,15 @@
 </head>
 <body onload="number_pages()">
 <section id="notes">
-  <h5>
-    Les factures sont payables au numéro de compte  <b> CBC BE72 7320 4627 5216 </b>
-    <br>
-   au plus tard dans les 30 jours de leur envoi.
-  </h5>
   <p>
-    Nous vous remercions pour votre confiance
+    Pour plus d'information sur ce devis, vous pouvez nous contacter directement : philippe@plusview.be ou 0476 43 30
+    04.
+    <br>
   </p>
+  <h5>
+    Nous vous remercions de votre confiance.
+
+  </h5>
   <h5>
     <span class="page"></span>/<span class="topage"></span>
   </h5>
