--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -83,7 +83,6 @@
         line-height: 1em;
         font-weight: bold;
         font-size: 22px;
-        color: #B32C39;
       }
 
       span {
@@ -100,6 +99,10 @@
     }
   }
 
+  .description {
+    margin-left: 3%;
+  }
+
   #invoice-title-number {
     font-weight: bold;
     margin: 30px 0;
@@ -113,17 +116,17 @@
     #invoice-title, #quotation-title {
       text-transform: uppercase;
       padding: 0 40px 0 40px;
-      font-size: 50px;
+      font-size: 40px;
       color: white;
       margin-left: 3%;
     }
 
     #invoice-title {
-      background: #F4846F;
+      background: rgba(12, 84, 96, 0.70);
     }
 
     #quotation-title {
-      background: #55a1f4;
+      background: rgba(12, 84, 96, 0.70);
     }
 
     #quotation-number {
@@ -168,10 +171,10 @@
     margin: 35px 30px 0 30px;
 
     .title-project {
-      background: rgba(12, 84, 96, 0.63);
+      background: rgba(12, 84, 96, 0.70);
       color: white;
       display: inline;
-      padding: 0.5% 1.5%;
+      padding: 0% 1.5%;
     }
 
     .title-project-container {
@@ -254,7 +257,7 @@
     margin: 40px 30px 0 0;
     z-index: 100;
     position: relative;
-    background: url("total-stripe-firebrick.png") right bottom no-repeat;
+    background: url("total-stripe-turquoise.png") right bottom no-repeat;
 
     table {
       float: right;
@@ -305,9 +308,9 @@
     }
 
     p {
+      text-align: center;
       color: grey;
-      text-align: justify;
-      font-size: 10px;
+      font-size: 14px;
       margin-left: 65px;
       margin-right: 65px;
     }
