--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -56,7 +56,7 @@
   <tbody>
   <% unless @customers.any? %>
     <tr>
-      <td class="emptyTable" colspan="9">Aucune données à afficher</td>
+      <td class="center aligned" colspan="9"><%= t('no_data_display') %></td>
     </tr>
   <% end %>
   <% @customers.each do |customer| %>
