--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -2,7 +2,7 @@
   <div id="container">
     <section id="memo">
       <div class="logo">
-        <%= wicked_pdf_image_tag "logo_greday.png" %>
+        <%= wicked_pdf_image_tag "plusview.png" %>
       </div>
 
       <div class="company-info">
@@ -30,7 +30,7 @@
       </div>
       <div>
         <span>
-          <%= @invoice.customer.street.to_s + ', ' + @invoice.customer.number.to_s %>
+          <%= @invoice.customer.street + ', ' + @invoice.customer.number.to_s %>
         </span>
       </div>
       <div>
@@ -39,15 +39,11 @@
         </span>
       </div>
       <div>
+        <% if @invoice.customer.tva_record %>
         <span>
-          <%= @invoice.customer.country %>
+          <%= "TVA : " + @invoice.customer.tva_record %>
         </span>
-      </div>
-
-      <div>
-              <span>
-      <%= "TVA : " + @invoice.customer.tva_record %>
-              </span>
+        <% end %>
       </div>
     </section>
 
@@ -67,7 +63,7 @@
     <div class="clearfix"></div>
 
     <span id="dateInvoice">
-          <%= "Wonck le, " + l(@invoice.date).to_s %>
+          <%= "Roclenge le, " + l(@invoice.date).to_s %>
     </span>
 
     <hr>
@@ -80,63 +76,14 @@
             <div class="title-project-container">
               <h4 class="title-project">Projet #<%= project.id %> : <%= project.name %></h4>
             </div>
-            <p><%= project.description %></p>
-            <% if project.services.any? %>
-              <h5>Prestations</h5>
-
-              <table class="table table-hover table-striped avoidbreak">
-                <thead class=thead-dark>
-                <tr>
-                  <th class="name-cell"><%= t('Name') %></th>
-                  <th class="quantity-cell"><%= t('duration') %></th>
-                  <th class="number-cell"><%= t('hourly_rate') + ' (€)' %></th>
-                  <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
-                  <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <% project.services.each do |service| %>
-                  <tr>
-                    <td class="name-cell"><%= service.name %></td>
-                    <td class="quantity-cell"><%= service.duration.strftime('%H:%M') %></td>
-                    <td class="number-cell"><%= number_with_precision service.hourly_rate, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision service.tva_rate, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision service.total_gross, :precision => 2 %></td>
-                  </tr>
-                <% end %>
-                </tbody>
-              </table>
-            <% end %>
-          </div>
-          <div class="avoidbreak">
-            <% if project.wares.any? %>
-              <h5>Marchandises</h5>
-
-              <table class="table table-hover table-striped">
-                <thead class=thead-dark>
-                <tr>
-                  <th class="name-cell"><%= t('ware_name') %></th>
-                  <th class="quantity-cell"><%= t('Quantity') %></th>
-                  <th class="number-cell"><%= t('sell_price') + ' (€)' %></th>
-                  <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
-                  <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
-                </tr>
-                </thead>
-
-                <tbody>
-                <% project.wares.each do |ware| %>
-                  <tr>
-                    <td class="name-cell"><%= ware.ware_name %></td>
-                    <td class="quantity-cell"><%= ware.quantity %></td>
-                    <td class="number-cell"><%= number_with_precision ware.sell_price, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision ware.tva_rate, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
-                  </tr>
-                <% end %>
-                </tbody>
-              </table>
-            <% end %>
+            <p><%= project.description %>
+              <br>
+              <%= t('PO') + ":" %>
+              <%= project.po ? project.po : "/" %>
+              <br>
+              <%= t('applicant') + ":" %>
+              <%= project.applicant ? project.applicant : "/" %>
+            </p>
           </div>
           <div class="avoidbreak">
             <% if project.project_extra_lines.any? %>
@@ -155,26 +102,30 @@
                 </thead>
 
                 <tbody>
-                <% unless project.project_extra_lines.any? %>
-                  <tr>
-                    <td class="emptyTable" colspan="9">Aucune données à afficher</td>
-                  </tr>
-                <% end %>
                 <% project.project_extra_lines.each do |project_extra_line| %>
-                  <tr>
-                    <td class="name-cell"><%= project_extra_line.extra.name %></td>
-                    <td class="quantity-cell"><%= project_extra_line.quantity.to_s + ' ' + project_extra_line.extra.unit %></td>
-                    <td class="number-cell"><%= number_with_precision project_extra_line.extra.unit_price, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision project_extra_line.extra.tva_rate, :precision => 2 %></td>
-                    <td class="number-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
-                  </tr>
+                  <% if project_extra_line.is_manual %>
+                    <tr>
+                      <td class="name-cell"><%= project_extra_line.manual_name %></td>
+                      <td class="quantity-cell"><%= project_extra_line.quantity.to_s + ' ' + project_extra_line.unit %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.manual_price, :precision => 2 %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.manual_vat, :precision => 2 %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
+                    </tr>
+                  <% else %>
+                    <tr>
+                      <td class="name-cell"><%= project_extra_line.extra.name %></td>
+                      <td class="quantity-cell"><%= project_extra_line.quantity.to_s + ' ' + project_extra_line.extra.unit %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.extra.unit_price, :precision => 2 %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.extra.tva_rate, :precision => 2 %></td>
+                      <td class="number-cell"><%= number_with_precision project_extra_line.total_gross, :precision => 2 %></td>
+                    </tr>
+                  <% end %>
                 <% end %>
                 </tbody>
               </table>
             <% end %>
           </div>
         </section>
-
         <% unless @invoice.projects.length == 1 && @invoice.wares.length == 0 %>
           <section id="sums" class="sums_project">
             <table cellpadding="0" cellspacing="0">
@@ -198,41 +149,6 @@
         <% end %>
       <% end %>
     <% end %>
-    <section id="items" class="wares avoidbreak">
-      <% if @invoice.wares.any? %>
-        <% if @invoice.projects.any? %>
-          <div class="title-project-container">
-            <h4 class="title-project">Comptoir</h4>
-          </div>
-        <% else %>
-          <h4>Marchandises</h4>
-        <% end %>
-        <table class="table table-hover table-striped">
-          <thead class=thead-dark>
-          <tr>
-            <th class="name-cell"><%= t('ware_name') %></th>
-            <th class="quantity-cell"><%= t('Quantity') %></th>
-            <th class="number-cell"><%= t('sell_price') + ' (€)' %></th>
-            <th class="number-cell"><%= t('tva_rate') + ' (%)' %></th>
-            <th class="number-cell"><%= t('total_gross') + ' (€)' %></th>
-          </tr>
-          </thead>
-
-          <tbody>
-          <% @invoice.wares.each do |ware| %>
-            <tr>
-              <td class="name-cell"><%= ware.ware_name %></td>
-              <td class="quantity-cell"><%= ware.quantity %></td>
-              <td class="number-cell"><%= number_with_precision ware.sell_price, :precision => 2 %></td>
-              <td class="number-cell"><%= number_with_precision ware.tva_rate, :precision => 2 %></td>
-              <td class="number-cell"><%= number_with_precision ware.total_gross, :precision => 2 %></td>
-            </tr>
-          <% end %>
-          </tbody>
-        </table>
-      <% end %>
-    </section>
-
     <section id="sums" class="avoidbreak">
       <div class="clearfix"></div>
       <table>
