Migration to Semantic UI 100%

--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -329,4 +329,10 @@
     page-break-inside: avoid;
   }
 
+  .tva-note {
+    margin-right: 2rem;
+    margin-top: 1rem;
+    float: right;
+  }
+
 }
