--- a/app/views/project_extra_lines/_form.html.erb
+++ b/app/views/project_extra_lines/_form.html.erb
@@ -27,7 +27,7 @@
 
       <div class="field">
         <%= form.label t('extra') %>
-        <%= form.select(:extra_id, Extra.all.collect {|extra| [extra.name, extra.id, {category: extra.category}]}, {}, {class: 'form-control', id: 'extra_edit_select', autocomplete: 'nope'}) %>
+        <%= form.select(:extra_id, options_for_select(Extra.all.collect { |extra| [extra.name, extra.id, {category: extra.category}] }, selected: @project_extra_line.extra_id), {class: 'form-control', id: 'extra_edit_select', autocomplete: 'nope'}) %>
       </div>
 
     </div>
@@ -37,7 +37,7 @@
       <div class="field">
         <%= form.label t('unit') %>
         <%= form.select(:id, Extra.all
-            .collect {|extra| [extra.unit, extra.id, {extra: extra.id}]}, {}, {class: 'form-control', id: 'extra_unit', autocomplete: 'nope', :disabled => true}) %>
+            .collect { |extra| [extra.unit, extra.id, {extra: extra.id}] }, {}, {class: 'form-control', id: 'extra_unit', autocomplete: 'nope', :disabled => true}) %>
       </div>
 
       <div class="field">
@@ -48,13 +48,12 @@
       <div class="field">
         <%= form.label t('extra_price') %>
         <%= form.select(:id, Extra.all
-            .collect {|extra| [extra.unit_price, extra.id, {extra: extra.id}]}, {}, {class: 'form-control', id: 'extra_unit_price', autocomplete: 'nope', :disabled => true}) %>
+            .collect { |extra| [extra.unit_price, extra.id, {extra: extra.id}] }, {}, {class: 'form-control', id: 'extra_unit_price', autocomplete: 'nope', :disabled => true}) %>
       </div>
 
       <div class="field">
         <%= form.label t('tva_rate') %>
-        <%= form.select(:id, Extra.all
-            .collect {|extra| [extra.tva_rate, extra.id, {extra: extra.id}]}, {}, {class: 'form-control', id: 'extra_tva_rate', autocomplete: 'nope', :disabled => true}) %>
+        <%= form.text_field :tva_rate, class: "form-control", autocomplete: 'nope', id: 'extra_tva_rate', value: @project_extra_line.tva_rate ? @project_extra_line.tva_rate : "21" %>
       </div>
 
     </div>
